approval buttons fixed missing margin

--- a/refugee/src/App.css
+++ b/refugee/src/App.css
@@ -142,6 +142,13 @@ nav {
 }
 
 
+/* individual approval story card styling */
+
+.approve-button {
+    margin-right: 1%
+}
+
+
 
 
 /* login form styling */
